--- a/index.html
+++ b/index.html
@@ -152,6 +152,17 @@
                         <li><a href="https://github.com/danartech/Power-BI-Projects" class="button">View Projects</a></li>
                     </ul>
                 </article>
+                <!-- Excel Projects -->
+                <article>
+                    <header>
+                        <h2><a href="https://github.com/danartech/Excel-Projects">Excel Projects</a></h2>
+                    </header>
+                    <a href="https://github.com/danartech/Excel-Projects" class="image fit"><img src="https://github.com/danartech/DanaTheAnalyst.github.io/blob/main/images/microsoft-office-7040220_1280.png" alt="Excel Projects" /></a>
+                    <p>Explore my data analysis projects created using Microsoft Excel.</p>
+                    <ul class="actions special">
+                        <li><a href="https://github.com/danartech/Excel-Projects" class="button">View Projects</a></li>
+                    </ul>
+                </article>
             </section>
 
             <!-- Skills and Certifications -->
@@ -162,116 +173,110 @@
                         <img src="https://i.imgur.com/9YtURZR.png" alt="CompTIA Security+">
                         <div>
                             <h3>🔐 CompTIA Security+</h3>
-                            <a href="https://www.credly.com/badges/ab411b1b-2f15-4161-8340-78d1071d077c/public_url">CompTIA Security+</a>
+                            <p>Certification demonstrating knowledge of cybersecurity concepts and practices.</p>
                         </div>
                     </div>
                     <div class="certification-item">
-                        <img src="https://i.imgur.com/KQNAdOm.png" alt="CompTIA Network+">
+                        <img src="https://i.imgur.com/2vR4aQO.png" alt="CompTIA Network+">
                         <div>
-                            <h3>🌐 CompTIA Network+</h3>
-                            <a href="https://www.credly.com/badges/e49b2a76-d09c-4e72-8f7f-4839f9d6bc8f/public_url">CompTIA Network+</a>
+                            <h3>🔌 CompTIA Network+</h3>
+                            <p>Certification showcasing skills in managing, maintaining, troubleshooting, installing, and configuring network infrastructure.</p>
                         </div>
                     </div>
                     <div class="certification-item">
-                        <img src="https://i.imgur.com/a1N480G.png" alt="CompTIA A+">
+                        <img src="https://i.imgur.com/wIHRh8F.png" alt="CompTIA A+">
                         <div>
                             <h3>💻 CompTIA A+</h3>
-                            <a href="https://www.credly.com/badges/d273c5b6-a92a-481b-9bfc-fdd1a81cbdc9/public_url">CompTIA A+</a>
+                            <p>Certification verifying skills as an IT operational role and technical support specialist.</p>
                         </div>
                     </div>
                     <div class="certification-item">
-                        <img src="https://i.imgur.com/GsL3t5t.png" alt="AWS Certified Cloud Practitioner">
+                        <img src="https://i.imgur.com/zMrxJ5o.png" alt="Google IT Support Professional">
                         <div>
-                            <h3>☁️ AWS Cloud Practitioner</h3>
-                            <a href="https://www.credly.com/badges/0d41c123-b789-4582-9d4e-fd317f2bbb2e/public_url">AWS Certified Cloud Practitioner</a>
+                            <h3>💼 Google IT Support Professional</h3>
+                            <p>Certification that demonstrates knowledge in troubleshooting, customer service, networking, operating systems, system administration, and security.</p>
                         </div>
                     </div>
                     <div class="certification-item">
-                        <img src="https://i.imgur.com/hOW7rTQ.png" alt="Microsoft Certified: Azure Fundamentals">
+                        <img src="https://i.imgur.com/zMrxJ5o.png" alt="Google Cybersecurity Professional">
                         <div>
-                            <h3>📘 Azure Fundamentals</h3>
-                            <a href="https://learn.microsoft.com/api/credentials/share/en-us/DanaRobinson-5540/ADC24F83CC636771?sharingId=D08918252DFABD21">Microsoft Certified: Azure Fundamentals</a>
+                            <h3>🛡️ Google Cybersecurity Professional</h3>
+                            <p>Certification that showcases foundational skills in identifying, protecting, and defending against cybersecurity threats.</p>
                         </div>
                     </div>
                     <div class="certification-item">
-                        <img src="https://i.imgur.com/lctxOq1.png" alt="Google Data Analytics">
+                        <img src="https://i.imgur.com/XQjrfIQ.png" alt="Microsoft Certified: Azure Fundamentals">
                         <div>
-                            <h3>📊 Google Data Analytics</h3>
-                            <a href="https://coursera.org/share/4ed75de36411d7d5c0389e2d61a2c2ff">Google Data Analytics Certificate</a>
+                            <h3>☁️ Microsoft Certified: Azure Fundamentals</h3>
+                            <p>Certification demonstrating foundational knowledge of cloud services and how they are provided with Microsoft Azure.</p>
                         </div>
                     </div>
                     <div class="certification-item">
-                        <img src="https://i.imgur.com/FAkm4Zi.png" alt="Google Cybersecurity Certificate">
+                        <img src="https://i.imgur.com/k0rc9RU.png" alt="AWS Certified Cloud Practitioner">
                         <div>
-                            <h3>🔒 Google Cybersecurity</h3>
-                            <a href="https://www.credly.com/badges/68cc3a44-5686-42d8-8745-81de1fc071e1/public_url">Google Cybersecurity Certificate</a>
+                            <h3>☁️ AWS Certified Cloud Practitioner</h3>
+                            <p>Certification that demonstrates a fundamental understanding of AWS Cloud concepts, services, and terminology.</p>
                         </div>
                     </div>
                     <div class="certification-item">
-                        <img src="https://i.imgur.com/t7zm1cY.png" alt="Google IT Support Certificate">
+                        <img src="https://i.imgur.com/EpBMZBe.png" alt="Google Data Analytics Professional">
                         <div>
-                            <h3>🛠️ Google IT Support</h3>
-                            <a href="https://www.credly.com/badges/7f5c8e1d-7c71-4b53-94a1-8440218cfb97/public_url">Google IT Support Certificate</a>
-                        </div>
-                    </div>
-                    <div class="certification-item">
-                        <img src="https://i.imgur.com/xiEJ7PF.png" alt="Python for Data Science and AI">
-                        <div>
-                            <h3>🐍 Python for Data Science</h3>
-                            <a href="https://www.credly.com/badges/4f0fcef8-75d4-4114-9ccc-20a10d21f494/public_url">Python for Data Science and AI</a>
-                        </div>
-                    </div>
-                    <div class="certification-item">
-                        <img src="https://i.imgur.com/hYLpafU.png" alt="DevOps Essentials">
-                        <div>
-                            <h3>🚀 DevOps Essentials</h3>
-                            <a href="https://www.credly.com/badges/f69eaab3-761a-47bd-85ed-dde1ea5aa652/public_url">DevOps Essentials</a>
+                            <h3>📊 Google Data Analytics Professional</h3>
+                            <p>Certification that showcases knowledge in data cleaning, analysis, and visualization using tools like Excel, SQL, and Tableau.</p>
                         </div>
                     </div>
                 </div>
+
                 <div class="skills-certifications">
                     <h2>Skills</h2>
                     <ul>
-                        <li>Excel</li>
+                        <li>Excel Data Analysis</li>
                         <li>SQL</li>
                         <li>Tableau</li>
+                        <li>Power BI</li>
                         <li>Python</li>
                         <li>Cloud Technologies</li>
                         <li>Cybersecurity</li>
                         <li>Data Cleaning</li>
                         <li>Data Exploration</li>
-                        <li>Interactive Dashboards</li>
+                        <li>Data Visualization</li>
+                        <li>Web Scraping</li>
+                        <li>Automation</li>
                     </ul>
                 </div>
             </section>
 
             <!-- Contact -->
-            <section class="contact-box">
-                <h3>Location</h3>
-                <p>Aurora, CO 80017</p>
-                <h3>Phone</h3>
-                <p><a href="tel:+17209821564">(720) 982-1564</a></p>
-                <h3>Email</h3>
-                <p><a href="mailto:danarfintech@gmail.com">danarfintech@gmail.com</a></p>
-                <h3>Social</h3>
-                <ul class="icons alt">
-                    <li><a href="https://www.linkedin.com/in/dana-robinson-acct/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                    <li><a href="https://github.com/danartech" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-                </ul>
+            <section>
+                <div class="contact-box">
+                    <h3>Contact Me</h3>
+                    <p>Email: <a href="mailto:dana.robinson@example.com">dana.robinson@example.com</a></p>
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/dana-robinson-acct/">linkedin.com/in/dana-robinson-acct/</a></p>
+                    <p>GitHub: <a href="https://github.com/danartech">github.com/danartech</a></p>
+                </div>
             </section>
+
         </div>
 
-        <!-- Copyright -->
-        <div id="@danartech">
-            <ul><li>&copy; <a href="https://github.com/danartech">danartech on GitHub</a></li></ul>
-        </div>
+        <!-- Footer -->
+        <footer id="footer">
+            <section class="split contact">
+                <section>
+                    <h3>Follow Me</h3>
+                    <ul class="icons alt">
+                        <li><a href="https://www.linkedin.com/in/dana-robinson-acct/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                        <li><a href="https://github.com/danartech" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+                    </ul>
+                </section>
+            </section>
+        </footer>
 
     </div>
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
     <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
@@ -279,3 +284,4 @@
 
 </body>
 </html>
+
